Build/third-party-libraries/packages/nuget.org/nunit3testadapter/4.0.0/readme.md
NUnit3TestAdapter [4.0.0](https://www.nuget.org/packages/NUnit3TestAdapter/4.0.0)
--------------------

Used by: AspNetCore internal, AspNetCoreNSwag internal, AspNetCoreSwashbuckle internal, Core internal, DesignTime internal, SelfHost internal

Target frameworks: net461, net5.0, netcoreapp2.1, netcoreapp3.1

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/nunit/nunit3-vs-adapter) 
- project license: [Unknown](https://docs.nunit.org/articles/vs-test-adapter/Index.html) , License should be verified on https://docs.nunit.org/articles/vs-test-adapter/Index.html

Description
-----------
The NUnit3 TestAdapter for Visual Studio, all versions from 2012 and onwards, and DotNet (incl. .Net core).

          Note that this package ONLY contains the adapter, not the NUnit framework.
          For VS 2017 and forward, you should add this package to every test project in your solution. (Earlier versions only require a single adapter package per solution.)

          Note that with this package you should not install the VSIX adapter package.

Remarks
-----------
no remarks


Dependencies 0
-----------


*This page was generated by a tool.*