Build/third-party-libraries/packages/nuget.org/nunit3testadapter/6.2.0/readme.md
NUnit3TestAdapter [6.2.0](https://www.nuget.org/packages/NUnit3TestAdapter/6.2.0)
--------------------

Used by: AspNetCore internal, AspNetCoreNSwag internal, AspNetCoreSwashbuckle internal, ClientDI internal, Core internal, DesignTime internal, Emit internal, MemoryPack internal, MessagePack internal, NerdbankMessagePack internal, SelfHost internal

Target frameworks: net10.0, net481, net8.0, net9.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/nunit/nunit3-vs-adapter) 
- project license: [Unknown](https://docs.nunit.org/articles/vs-test-adapter/Index.html) 

Description
-----------
The NUnit3 TestAdapter for Visual Studio, all versions from 2012 and onwards, and DotNet (incl. .Net core), versions .net framework 4.6.2 or higher, .net 8 or higher.

      Note that this package ONLY contains the adapter, not the NUnit framework.
      For VS 2017 and forward, you should add this package to every test project in your solution. (Earlier versions only require a single adapter package per solution.)

Dependencies 3
-----------

|Name|Version|
|----------|:----|
|[Microsoft.Extensions.DependencyModel](../../../../packages/nuget.org/microsoft.extensions.dependencymodel/8.0.2)|8.0.2|
|[Microsoft.Testing.Extensions.VSTestBridge](../../../../packages/nuget.org/microsoft.testing.extensions.vstestbridge/2.1.0)|2.1.0|
|[Microsoft.Testing.Platform.MSBuild](../../../../packages/nuget.org/microsoft.testing.platform.msbuild/2.1.0)|2.1.0|

*This page was generated by a tool.*